force-app/main/default/objects/Catering_Request__c/Catering_Request__c.object-meta.xml
<CustomObject>
    <label>Catering Request</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Catering Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catering Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>