force-app/main/default/objects/Catering_Request__c/fields/Catering_Crew__c.field-meta.xml
<CustomField>
    <fullName>Catering_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catering Crew</label>
    <referenceTo>Ground_Crew__c</referenceTo>
    <relationshipLabel>Catering Requests</relationshipLabel>
    <relationshipName>Catering_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>