force-app/main/default/objects/Catering_Request__c/fields/Catering_Type__c.field-meta.xml
<CustomField>
    <fullName>Catering_Type__c</fullName>
    <label>Catering Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Crew Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>