force-app/main/default/objects/Catering_Request__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Catering Requests</relationshipLabel>
    <relationshipName>Catering_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>