force-app/main/default/objects/Catering_Request__c/fields/Meal_Count__c.field-meta.xml
<CustomField>
    <fullName>Meal_Count__c</fullName>
    <label>Meal Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>