force-app/main/default/objects/Catering_Request__c/validationRules/Meal_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Meal_Count</fullName>
    <active>true</active>
    <errorConditionFormula>Meal_Count__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Meal_Count__c</errorDisplayField>
    <errorMessage>Meal Count must be greater than zero.</errorMessage>
</ValidationRule>